# nrng

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: build_cmake.yml
cmake/: Doxygen.cmake  StaticAnalyzers.cmake
include/nrng/: accumulate.hpp  adjacent_difference.hpp  central_moment.hpp  iota.hpp  kahan.hpp  moment.hpp  partial_sum.hpp  power.hpp  reduce.hpp  transform_reduce.hpp  type_traits.hpp
tests/: CMakeLists.txt  accumulate.test.cpp  adjacent_difference.test.cpp  central_moment.test.cpp  iota.test.cpp  kahan.test.cpp  moment.test.cpp  partial_sum.test.cpp  power.test.cpp  reduce.test.cpp  transform_reduce.test.cpp  type_traits.test.cpp
